--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -6,3 +6,10 @@ en:
     attributes:
       user:
         password_digest: Password
+
+en:
+  errors:
+    messages:
+      wrong_size: "is the wrong size (should be %{file_size})"
+      size_too_small: "is too small (should be at least %{file_size})"
+      size_too_big: "is too big (should be at most %{file_size})"
